// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParcoursService should call getAllParcours 1`] = `
Array [
  Object {
    "beginDate": 2023-02-25T00:00:00.000Z,
    "campus": "Paris",
    "createdAt": 2020-01-01T00:00:00.000Z,
    "description": "Un master dédié à l’étude des systèmes d’information ainsi que leur implémentation dans les entreprises",
    "durationInMonths": 24,
    "id": "4edd40c86762e0fb12000003",
    "modules": Array [
      Object {
        "description": "Autour de la gestion d'information",
        "title": "Systèmes d'information",
      },
      Object {
        "description": "Préparation Certification SAP",
        "titre": "ERP",
      },
    ],
    "onSitePercentage": 50,
    "price": 12000,
    "title": "Génie Logiciel",
    "type": "Master",
  },
  Object {
    "beginDate": 2023-01-01T00:00:00.000Z,
    "campus": "Strasbourg",
    "createdAt": 2020-01-01T00:00:00.000Z,
    "description": "Un master dédié à devenir un bon agriculteur!",
    "durationInMonths": 24,
    "id": "4edd40c86762e0fb12000004",
    "modules": Array [
      Object {
        "description": "Apprentissage: Comment traire une vache comme un pro",
        "title": "Trait des vaches",
      },
      Object {
        "description": "Apprentissage: Combat à la fourche",
        "titre": "FOURCHE",
      },
    ],
    "onSitePercentage": 100,
    "price": 1000,
    "title": "Agronomie",
    "type": "DUT",
  },
]
`;

exports[`ParcoursService should call getParcoursById 1`] = `
Object {
  "beginDate": 2023-02-25T00:00:00.000Z,
  "campus": "Paris",
  "createdAt": 2020-01-01T00:00:00.000Z,
  "description": "Un master dédié à l’étude des systèmes d’information ainsi que leur implémentation dans les entreprises",
  "durationInMonths": 24,
  "id": "4edd40c86762e0fb12000003",
  "modules": Array [
    Object {
      "description": "Autour de la gestion d'information",
      "title": "Systèmes d'information",
    },
    Object {
      "description": "Préparation Certification SAP",
      "titre": "ERP",
    },
  ],
  "onSitePercentage": 50,
  "price": 12000,
  "title": "Génie Logiciel",
  "type": "Master",
}
`;
